Minor Project: Intial Commit

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container1
+{
+  display: flex;
+  flex-direction: row;
+  height:20%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100vw;
+  height:100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.panel {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 90vh;
+  width: 20vw;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.list {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  color: black;
+  list-style-type:none;
+}
+.item
+{
+  text-align:center;
+  font-size: 2.75vh;
+  margin: 3vh 0vh 1vh 0vh;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding:2vh;
+  border-bottom: solid 0.2vh #04cc11;
+}
+.link:hover{
+  transform: translateY(10px);
+}
+.link
+{
+  text-decoration:none;
+  color:#022e05;
+}
+.homepage
+{
+  display: flex;
+  width:80vw;
+  flex-direction: column;
+  height: 100vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section
+{
+  width: 100vw;
+  height:900px;
 }
+#humidity{
+  background-color: black;
+}
+#temperature
+{
+  background-color: tan;
+}
+#moisture
+{
+  background-color: teal;
+}
+
