--- a/src/App.css
+++ b/src/App.css
@@ -3,26 +3,54 @@
   padding: 0;
   box-sizing: border-box;
 }
-.container1
-{
-  display: flex;
-  flex-direction: row;
-  height:20%;
-}
-.nav
-{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+.container2{
   width: 100vw;
-  height:100%;
+  height: 100%;
+  overflow-x: hidden;
 }
+.nav {
+  position: fixed;
+  top: 0px;
+  display: flex;
+  padding:0;
+  width: 100%;
+  height: 10%;
+  background-color: #071100;
+  align-items: center;
+  margin:0;
+  overflow: hidden;
+}
+.navList {
+  display: flex;
+  text-decoration: none;
+  color: black;
+  list-style-type: none;
+}
+
+.navItem {
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  list-style-type: none;
+  margin: 20px;
+  text-transform: uppercase;
+  font-size: 2.75vh;
+  color: whitesmoke;
+  font-family: "Secular One", cursive;
+}
+
+.navItem:hover {
+  color: #5cf006;
+}
+
 .panel {
   display: flex;
   flex-direction: column;
+  width: 20%;
   height: 90vh;
-  width: 20vw;
   justify-content: center;
+  background-color: #020f01;
+  align-items: center;
 }
 
 .list {
@@ -30,48 +58,67 @@
   flex-direction: column;
   text-decoration: none;
   color: black;
-  list-style-type:none;
+  list-style-type: none;
 }
-.item
-{
-  text-align:center;
+.listItem {
   font-size: 2.75vh;
   margin: 3vh 0vh 1vh 0vh;
   text-transform: uppercase;
-  font-weight: bold;
-  padding:2vh;
-  border-bottom: solid 0.2vh #04cc11;
+  padding: 2vh;
 }
-.link:hover{
-  transform: translateY(10px);
-}
-.link
-{
-  text-decoration:none;
-  color:#022e05;
-}
-.homepage
-{
-  display: flex;
-  width:80vw;
-  flex-direction: column;
-  height: 100vh;
+.listItem:hover {
+  transform: scale(1.12);
 }
 
+.link {
+  text-decoration: none;
+  color: #ffffff;
+  font-family: "Secular One", cursive;
+}
+.link:hover {
+  color: #5cf006;
+}
+.homepage {
+  position: absolute;
+  top:5vh;
+  left:20vw;
+  display: flex;
+  width: 60%;
+  flex-direction: column;
+  height: 100%;
+}
+
+.section {
+  width: 100%;
+  height: 900px;
+}
+
+#logo {
+  width: 3vw;
+  height: 6vh;
+}
+
+.panelIcons {
+  width: 1.2vw;
+  height: 2.5vh;
+  margin-right: 2vh;
+}
 .section
 {
-  width: 100vw;
-  height:900px;
+  width: 100%;
+  height: 600px;
 }
-#humidity{
+
+#humidity
+{
   background-color: white;
 }
+
 #temperature
 {
-  background-color: tan;
+  background-color: #71e868;
 }
 #moisture
 {
-  background-color: teal;
+  background-color:#33e026;
 }
-
