--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
 }
 .container2{
+  position: fixed;
+  top:10vh;
   width: 100vw;
-  height: 100%;
-  overflow-x: hidden;
+  height: 100vh;
+  overflow:hidden;
 }
 .nav {
   position: fixed;
@@ -18,7 +20,6 @@
   background-color: #071100;
   align-items: center;
   margin:0;
-  overflow: hidden;
 }
 .navList {
   display: flex;
@@ -47,7 +48,7 @@
   display: flex;
   flex-direction: column;
   width: 20%;
-  height: 90vh;
+  height: 100vh;
   justify-content: center;
   background-color: #020f01;
   align-items: center;
