--- a/src/App.css
+++ b/src/App.css
@@ -3,23 +3,22 @@
   padding: 0px;
   box-sizing: border-box;
 }
-.container2{
+.container2 {
   position: fixed;
-  top:10vh;
+  top: 10vh;
   width: 100vw;
   height: 100vh;
- 
 }
 .nav {
   position: fixed;
   top: 0px;
   display: flex;
-  padding:0;
+  padding: 0;
   width: 100%;
   height: 10%;
   background-color: #071100;
   align-items: center;
-  margin:0;
+  margin: 0;
 }
 .navList {
   display: flex;
@@ -52,7 +51,7 @@
   justify-content: center;
   background-color: #020f01;
   align-items: center;
-  overflow:hidden;
+  overflow: hidden;
 }
 
 .list {
@@ -82,19 +81,20 @@
 }
 .homepage {
   position: absolute;
-  top:5vh;
-  left:20vw;
+  top: 5vh;
+  left: 20vw;
   display: flex;
   width: 80%;
   flex-direction: column;
   height: 100%;
   overflow: auto;
+  align-items: center;
 }
 
 .section {
   width: 100%;
   height: 900px;
-  padding:200px;
+  padding: 200px;
 }
 
 #logo {
@@ -107,23 +107,39 @@
   height: 2.5vh;
   margin-right: 2vh;
 }
-.section
-{
+.section {
   width: 100%;
   height: 600px;
-  padding-top: 0px;
+  padding-top: 20px;
 }
 
-#humidity
-{
+#humidity {
   background-color: white;
 }
 
-#temperature
-{
+#temperature {
   background-color: whitesmoke;
 }
-#moisture
-{
-  background-color:#eee;
+#moisture {
+  background-color: #eee;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 25vh;
+  height: 24vh;
+  border-radius: 10px;
+  padding: 3vh;
+  align-items: center;
+  margin: 4vh;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+    rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  background: rgb(34, 193, 195);
+  background: linear-gradient(
+    0deg,
+    rgba(34, 193, 195, 1) 0%,
+    rgba(253, 187, 45, 1) 100%
+  );
 }
