--- a/src/App.css
+++ b/src/App.css
@@ -133,3 +133,18 @@
     rgba(253, 187, 45, 1) 100%
   );
 }
+
+#alert
+{
+  display: flex;
+  flex-direction: row;
+  background-color: red;
+  align-items: center;
+  opacity: 0.8; 
+  width: 50vw;
+  height: auto;
+  padding:20px;
+  border-radius: 5px;
+  color:white;
+  font-size: 4vh;
+}
