--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,17 @@
   padding: 0px;
   box-sizing: border-box;
 }
+html {
+  font-size: 20px;
+    
+  @media screen and (min-width: 900px) {
+    font-size: 22px;
+  }
+    
+  @media screen and (min-width: 1200px) {
+    font-size: 24px;
+  }
+}
 .container2 {
   position: fixed;
   top: 10vh;
@@ -88,7 +99,6 @@
   flex-direction: column;
   height: 100%;
   overflow: auto;
-  align-items: center;
 }
 
 .section {
@@ -113,6 +123,8 @@
   padding-top: 20px;
 }
 
+
+
 .card {
   display: flex;
   flex-direction: column;
@@ -121,7 +133,7 @@
   border-radius: 10px;
   padding: 3vh;
   align-items: center;
-  margin: 4vh;
+  margin: 4vh 5vh 0 0;
   box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
     rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
     rgba(0, 0, 0, 0.09) 0px 32px 16px;
@@ -133,19 +145,7 @@
   );
 }
 
-#alert {
-  display: flex;
-  flex-direction: row;
-  background-color: red;
-  align-items: center;
-  opacity: 0.8;
-  width: 50vw;
-  height: auto;
-  padding: 20px;
-  border-radius: 5px;
-  color: white;
-  font-size: 4vh;
-}
+
 
 #aboutUs {
   display: flex;
@@ -199,4 +199,16 @@
 #humidAlter
 {
   font-size: 2vh;
+}
+
+.alert
+{
+  width:10vw;
+  height: auto;
+  display: flex;
+  margin-top:2.5rem;
+  flex-direction: column;
+  align-items: center;
+  background-color: #c92006;
+  border-radius:0.5rem;
 }
