--- a/src/App.css
+++ b/src/App.css
@@ -146,12 +146,11 @@ html {
 #contributors {
   display: flex;
   flex-direction: row;
-  margin: 4vh;
+  margin: 8vh;
 }
 
-.contri {
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+.contriPics {
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .loadingScreen {
