--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,9 @@ html {
   padding: 0;
   width: 100%;
   height: 10%;
-  background-color: #071100;
+  background-color: #2d3436;
+  background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
+
   align-items: center;
   margin: 0;
 }
@@ -49,14 +51,15 @@ html {
   color: #5cf006;
 }
 
-
 .panel {
   display: flex;
   flex-direction: column;
   width: 20%;
   height: 100vh;
   justify-content: stretch;
-  background-color: #020f01;
+  background-color: #2d3436;
+background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
+
   align-items: center;
   overflow: hidden;
 }
@@ -129,9 +132,8 @@ html {
   box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
   background-color: #17f9f2;
   background-image: linear-gradient(315deg, #17f9f2 0%, #b0f9a9 74%);
-  
 }
-.card:hover{
+.card:hover {
   transform: scale(1.01);
 }
 
@@ -187,7 +189,7 @@ html {
 
 .alert {
   width: auto;
-  padding:2vh;
+  padding: 2vh;
   height: auto;
   display: flex;
   margin-top: 2.5rem;
