--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,7 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
   height: 23vh;
   padding: 3vh;
   align-items: center;
+  border-radius: 6px;
   margin: 4vh 5vh 0 0;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
   background-color: #17f9f2;
