--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,7 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
   box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
   background-color: #17f9f2;
   background-image: linear-gradient(315deg, #17f9f2 0%, #b0f9a9 74%);
+  border-radius: 6px;
 }
 .card:hover {
   transform: scale(1.01);
