--- a/src/App.css
+++ b/src/App.css
@@ -200,3 +200,20 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
   background-color: #eb0000;
   border-radius: 0.1rem;
 }
+
+
+.blink
+{
+ animation: blinker .9s infinite;
+}
+
+@keyframes blinker{
+  to
+  {
+    opacity: 0;
+  }
+  from
+  {
+    opacity: 100%;
+  }
+}
