--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ html {
 }
 .container2 {
   position: fixed;
-  top: 10vh;
+  top: 5vh;
   width: 100vw;
   height: 100vh;
 }
@@ -56,10 +56,10 @@ html {
   flex-direction: column;
   width: 20%;
   height: 100vh;
+  margin-top: 5vh;
   justify-content: stretch;
   background-color: #2d3436;
-background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
-
+  background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
   align-items: center;
   overflow: hidden;
 }
@@ -78,16 +78,17 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
   padding: 1.5vh;
 }
 .listItem:hover {
-  transform: scale(1.01);
+  background: #00fff1;
+  background: -webkit-linear-gradient(275deg, #00fff1 0%, #00034f 100%);
+  background: linear-gradient(275deg, #00fff1 0%, #00034f 100%);  
+  cursor:pointer;
 }
 
 .link {
   text-decoration: none;
   color: #ffffff;
 }
-.link:hover {
-  color: #5cf006;
-}
+
 .homepage {
   position: absolute;
   top: 5vh;
@@ -97,12 +98,6 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
   flex-direction: column;
   height: 100%;
   overflow: auto;
-}
-
-.section {
-  width: 100%;
-  height: 900px;
-  padding: 200px;
 }
 
 #logo {
@@ -117,8 +112,8 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
 }
 .section {
   width: 100%;
-  height: 600px;
-  padding-top: 20px;
+  height: 800px;
+  padding: 200px;
 }
 
 .card {
@@ -130,10 +125,13 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
   align-items: center;
   border-radius: 6px;
   margin: 4vh 5vh 0 0;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
   background-color: #17f9f2;
   background-image: linear-gradient(315deg, #17f9f2 0%, #b0f9a9 74%);
-  border-radius: 6px;
+  backdrop-filter: blur(2.5px);
+  -webkit-backdrop-filter: blur(2.5px);
+  border-radius: 5px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 .card:hover {
   transform: scale(1.01);
@@ -201,19 +199,22 @@ background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
   border-radius: 0.1rem;
 }
 
-
-.blink
-{
- animation: blinker .9s infinite;
+.blink {
+  animation: blinker 0.9s infinite;
 }
 
-@keyframes blinker{
-  to
-  {
+@keyframes blinker {
+  to {
     opacity: 0;
   }
-  from
-  {
+  from {
     opacity: 100%;
   }
+}
+
+
+.graph{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
